登录页面完善，引入langgraph

--- a/前言.md
+++ b/前言.md
@@ -1,4 +1,9 @@
 # 前言
-*这个网页是给我老婆写的。取了她名字的首字母（即YJY），作为网页的名字。她是学生物的，要用到R语言编程。但这门课似乎对于她有点困难，于是我筹备开发了这样一个网页，用于给她提供教程、解析，以及答案。近日我通过提示词，使deepseek针对诸多编程类的难题提供了更加*
+*这个网页是给我对象写的。取了她名字的首字母（即YJY），作为网页的名字。她是学生物的，要用到R语言编程。但这门课似乎对于她有点困难，于是我筹备开发了这样一个网页，用于给她提供教程、解析，以及答案。近日我通过提示词工程，使deepseek针对诸多编程类的难题提供了更加形象的描述与解答。希望这套教程能帮助到她学习R语言。*
 
-**
+**关于一些细节的点**
+1.该页面采用粉色主题是因为我老婆喜欢粉色。并非本人的特殊癖好，不要恶意解读。
+2.如果你正好也是在R语言学习上遇上了困难的学生，且正好路过了该GitHub项目，你也可以大胆地使用该网页，甚至直接获取该网页的代码，不用担心专利问题。但是请你注意，其中的deepseek api-key是我的个人key，请你不要滥用，造成不必要的消费（不然我对象就用不了了）。
+3.技术栈上采用的是Django框架，langgraph的工作流。
+
+***无论是谁在使用该网页，我都希望：通过该网页的使用，你会迎来不再需要借助该网页的一天***
